on-premises/k8s/jupyter/kustomize/service-jupyter-ds.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-ds
spec:
  selector:
    app: jupyter-ds
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-all-spark
spec:
  selector:
    app: jupyter-all-spark
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
